base/solution010123/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution010123
  namespace: tenant-example
  labels:
    app: solution010123
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution010123
  template:
    metadata:
      labels:
        app: solution010123
    spec:
      containers:
      - name: solution010123
        image: 558232680640.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
