base/solution010123/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution010123-service
  namespace: tenant-example
  labels:
    app: solution010123
spec:
 selector:
   app: solution010123
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
