base/solution010123/virtual-service.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: solution010123-https
  namespace: tenant-example
  labels:
    app: solution010123
    gateway: https
spec:
  virtualHost:
    domains:
    - 'solution010123.ea.sdlc.k8s.cbrands.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: tenant-example-solution010123-service-9091
            namespace: gloo-system
